@@ -9,19 +9,4 @@
 
 defined('_JEXEC') or die;
 
-$fields = $this->form->getFieldset('item_associations');
-?>
-<div class="tab-pane" id="associations">
-	<fieldset>
-		<?php foreach ($fields as $field) : ?>
-		<div class="control-group">
-			<div class="control-label">
-				<?php echo $field->label ?>
-			</div>
-			<div class="controls">
-				<?php echo $field->input; ?>
-			</div>
-		</div>
-		<?php endforeach; ?>
-	</fieldset>
-</div>
+echo JLayoutHelper::render('joomla.edit.associations', $this);
