@@ -1,0 +1,27 @@
+<?php
+/**
+ * @package     Joomla.Site
+ * @subpackage  Layout
+ *
+ * @copyright   Copyright (C) 2005 - 2012 Open Source Matters, Inc. All rights reserved.
+ * @license     GNU General Public License version 2 or later; see LICENSE.txt
+ */
+
+defined('_JEXEC') or die;
+
+// JLayout for standard handling of associations fields in the administrator items edit screens.
+$fields = $displayData->get('form')->getFieldset('item_associations');
+?>
+
+<fieldset>
+	<?php foreach ($fields as $field) : ?>
+		<div class="control-group">
+			<div class="control-label">
+				<?php echo $field->label; ?>
+			</div>
+			<div class="controls">
+				<?php echo $field->input; ?>
+			</div>
+		</div>
+	<?php endforeach; ?>
+</fieldset>
